# hyper_array

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
include/hyper_array/: hyper_array.hpp
src/: playground  playground.cpp
test/: array.cpp  hyper_array.cpp  hyper_internal.cpp  index.cpp
